env/templates/700-arcalosui-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-secret
    nginx.ingress.kubernetes.io/auth-type: basic
  generation: 3
  labels:
    provider: fabric8
  name: arcalosui
  namespace: jx
spec:
  rules:
    - host: arcalosui-jx.aps-lordlemon.jxaas.io
      http:
        paths:
          - backend:
              serviceName: sso-jenkins-x-arcalosui
              servicePort: 80
  tls:
    - hosts:
        - arcalosui-jx.aps-lordlemon.jxaas.io
      secretName: tls-aps-lordlemon-jxaas-io-p
